fix: use pointer cursor for non-leaf nodes on IE11
Switched back to using the pointer cursor for non-leaf nodes on IE11, which does not support zoom in/out cursors.

SPWEB-4102

--- a/src/Node/style.css
+++ b/src/Node/style.css
@@ -9,6 +9,13 @@
   cursor: zoom-in;
 }
 
+/* IE 11 fallback behavior */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .collapsed, .nodeBase {
+    cursor: pointer;
+  }
+}
+
 .leafNodeBase {
   fill: white;
   stroke: #000;
